--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -83,3 +83,7 @@
 - name: install_ovmf
   include: install_ovmf.yml
   when: install_ovmf == true
+
+- name: install_fence_virtd
+  include: install_fence_virtd.yml
+  when: install_fence_virtd == true
