--- a/tasks/install_custom_qemu.yml
+++ b/tasks/install_custom_qemu.yml
@@ -1,7 +1,3 @@
 ---
 - name: install custom qemu-kvm, qemu-img and seabios-bin packages
-  yum: name="{{ item }}" state=present
-  with_items:
-    - qemu-kvm*+megasas+lsi
-    - qemu-img*+megasas+lsi
-    - seabios-bin*+megasas+lsi
+  command: yum downgrade --disablerepo=* --enablerepo=ondrejhome-fast-vm qemu-img qemu-kvm qemu-kvm-common seabios-bin -y
