--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -70,23 +70,26 @@
   service: name=libvirtd state=started enabled=yes
   when: config_libvirt_network == true
 
+### virt_net start - commands must be separate as the virt_net cannot handle 'state'/'command'/'autostart' together
 - name: define fast-vm-nat libvirt network
   when: config_libvirt_network == true
   virt_net:
     command: define
-    autostart: yes
     name: '{{ fastvm_net_name }}'
     xml: '{{ lookup("template", "fast-vm-nat.xml.j2") }}'
 
-- name: start and enable on boot fast-vm-nat libvirt network
+- name: start fast-vm-nat libvirt network
   when: config_libvirt_network == true
   virt_net:
     state: active
-    autostart: yes
     name: '{{ fastvm_net_name }}'
 
-- name: virt_net issue workaround - make the fast-vm-nat network to autostart
-  file: path="/etc/libvirt/qemu/networks/autostart/{{ fastvm_net_name }}.xml" src="../{{ fastvm_net_name }}.xml" state='link'
+- name: enable fast-vm-nat libvirt network on boot
+  when: config_libvirt_network == true
+  virt_net:
+    autostart: yes
+    name: '{{ fastvm_net_name }}'
+### virt_net end
 
 - name: create a thinpool LV for fast-vm storage
   lvol: vg={{ fastvm_vg }} size={{ fastvm_lv_size }} lv={{ fastvm_lv }} opts='-T' state=present
