--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,93 +3,21 @@
 - name: Include distribution specific variables
   include_vars: "{{ ansible_distribution }}.yml"
 
-- name: add and enable fast-vm yum repository
+- name: config_repositories
+  include: config_repositories.yml
   when: config_repositories == true
-  yum_repository:
-    name: ondrejhome-fast-vm
-    description: Copr repo for fast-vm owned by ondrejhome
-    baseurl: "{{ baseurl }}"
-    skip_if_unavailable: yes
-    gpgkey: https://copr-be.cloud.fedoraproject.org/results/ondrejhome/fast-vm/pubkey.gpg
-    enabled: yes
-    gpgcheck: yes
-    repo_gpgcheck: no
 
-- name: enable optional RPMs repository on RHEL systems
-  shell: subscription-manager repos --enable=rhel-7-server-optional-rpms
-  when: config_repositories == true and ansible_distribution == 'RedHat'
-  ignore_errors: True
+- name: install_fastvm
+  include: install_fastvm.yml
+  when: install_fastvm == true
 
-- name: yum install packages
-  when: install_fastvm == true and ansible_distribution != 'Fedora'
-  yum: name="{{ item }}" state=present
-  with_items:
-    - fast-vm
-    - dnsmasq-utils
-    - libguestfs-tools-c
-    - bash-completion
-    - python-lxml
-    - libvirt-python
-
-- name: dnf install packages
-  when: install_fastvm == true and ansible_distribution == 'Fedora'
-  dnf: name="{{ item }}" state=present
-  with_items:
-    - fast-vm
-    - dnsmasq-utils
-    - libguestfs-tools-c
-    - bash-completion
-    - python-lxml
-    - libvirt-python
-    - libselinux-python
-
-- name: libvirt unix_sock_group
-  lineinfile: dest=/etc/libvirt/libvirtd.conf regexp="unix_sock_group = " line="unix_sock_group = \"{{ fastvm_group }}\""
-  notify: restart libvirtd service
+- name: config_libvirt_access
+  include: config_libvirt_access.yml
   when: config_libvirt_access == true
 
-- name: libvirt unix_sock_rw_perms
-  lineinfile: dest=/etc/libvirt/libvirtd.conf regexp="unix_sock_rw_perms = " line="unix_sock_rw_perms = \"0770\""
-  notify: restart libvirtd service
-  when: config_libvirt_access == true
-
-- name: libvirt auth_unix_ro
-  lineinfile: dest=/etc/libvirt/libvirtd.conf regexp="auth_unix_ro = " line="auth_unix_ro = \"none\""
-  notify: restart libvirtd service
-  when: config_libvirt_access == true
-
-- name: libvirt auth_unix_rw
-  lineinfile: dest=/etc/libvirt/libvirtd.conf regexp="auth_unix_rw = " line="auth_unix_rw = \"none\""
-  notify: restart libvirtd service
-  when: config_libvirt_access == true
-
-- meta: flush_handlers
-  when: config_libvirt_access == true
-
-- name: ensure that libvirtd service is enabled and started
-  service: name=libvirtd state=started enabled=yes
+- name: config_libvirt_network
+  include: config_libvirt_network.yml
   when: config_libvirt_network == true
-
-### virt_net start - commands must be separate as the virt_net cannot handle 'state'/'command'/'autostart' together
-- name: define fast-vm-nat libvirt network
-  when: config_libvirt_network == true
-  virt_net:
-    command: define
-    name: '{{ fastvm_net_name }}'
-    xml: '{{ lookup("template", "fast-vm-nat.xml.j2") }}'
-
-- name: start fast-vm-nat libvirt network
-  when: config_libvirt_network == true
-  virt_net:
-    state: active
-    name: '{{ fastvm_net_name }}'
-
-- name: enable fast-vm-nat libvirt network on boot
-  when: config_libvirt_network == true
-  virt_net:
-    autostart: yes
-    name: '{{ fastvm_net_name }}'
-### virt_net end
 
 - name: create a thinpool LV for fast-vm storage
   lvol: vg={{ fastvm_vg }} size={{ fastvm_lv_size }} lv={{ fastvm_lv }} opts='-T' state=present
