--- a/tasks/install_fence_virtd.yml
+++ b/tasks/install_fence_virtd.yml
@@ -2,19 +2,12 @@
 - name: yum install fence_virtd packages
   when: ansible_distribution != 'Fedora'
   yum: name="{{ item }}" state=present
-  with_items:
-    - fence-virtd
-    - fence-virtd-libvirt
-    - fence-virtd-multicast
+  with_items: "{{ yum_packages_fence_virtd }}"
 
 - name: dnf install fence_virtd packages
   when: ansible_distribution == 'Fedora'
   dnf: name="{{ item }}" state=present
-  with_items:
-    - fence-virtd
-    - fence-virtd-libvirt
-    - fence-virtd-multicast
-    - python-firewall
+  with_items: "{{ dnf_packages_fence_virtd }}"
 
 - name: create /etc/cluster directory
   file: path="/etc/cluster" state=directory
