address some ansible-lint warning

--- a/tasks/config_repositories.yml
+++ b/tasks/config_repositories.yml
@@ -1,6 +1,6 @@
 ---
 - name: add and enable fast-vm yum repository
-  when: config_repositories == true
+  when: config_repositories|bool
   yum_repository:
     name: ondrejhome-fast-vm
     description: Copr repo for fast-vm owned by ondrejhome
@@ -13,6 +13,6 @@
 
 - name: enable optional RPMs repository on RHEL systems
   shell: subscription-manager repos --enable=rhel-7-server-optional-rpms
-  when: config_repositories == true and ansible_distribution == 'RedHat'
+  when: config_repositories|bool and ansible_distribution == 'RedHat'
   ignore_errors: True
   ## we ignore if this fails because we might have access to needed packages via other repository
