--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,7 @@
 galaxy_info:
   author: Ondrej Faměra
   description: role for installing and configuring fast-vm with additional features
+  company: Ondrej Faměra
   license: GPLv3
   min_ansible_version: 2.0
   platforms:
