--- a/tasks/config_repositories.yml
+++ b/tasks/config_repositories.yml
@@ -12,7 +12,7 @@
     repo_gpgcheck: no
 
 - name: enable optional RPMs repository on RHEL systems
-  shell: subscription-manager repos --enable=rhel-7-server-optional-rpms
+  command: subscription-manager repos --enable=rhel-7-server-optional-rpms
   when: config_repositories|bool and ansible_distribution == 'RedHat'
   ignore_errors: True
   ## we ignore if this fails because we might have access to needed packages via other repository
