updated syntax of plays to catch up changes in ansible

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,10 @@
 ---
 - name: restart libvirtd service
-  service: name=libvirtd state=restarted
+  service:
+    name: 'libvirtd'
+    state: 'restarted'
 
 - name: restart fence_virtd service
-  service: name=fence_virtd state=restarted
+  service:
+    name: 'fence_virtd'
+    state: 'restarted'
