--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,6 +21,8 @@ install_ovmf: true
 install_fence_virtd: true
 ## install custom version of qemu-kvm,qemu-img and seabios-bin to support LSI and MEGASAS emaulated drivers
 install_custom_qemu: true
+## Configure enable firewalld 
+use_firewalld: false
 
 ### variable that are required by some areas from above
 # all variable has list of 'required by' on which above options needs them
@@ -60,3 +62,4 @@ fastvm_owner_only_delete: 'yes'
 ## Multicast address of fence_virt daemon
 # required by: install_fence_virt
 fence_virtd_address: '225.0.0.12'
+
