quote number in order to removse warning about conversion from int to string
[WARNING]: The value 300 (type int) in a string field was converted to u'300' (type string). If this does not look like what you expect, quote the entire value to ensure it does not change.

--- a/tasks/install_ovmf.yml
+++ b/tasks/install_ovmf.yml
@@ -8,7 +8,7 @@
     skip_if_unavailable: yes
     enabled: yes
     gpgcheck: no
-    metadata_expire: 300
+    metadata_expire: '300'
 
 - name: install OVMF firmware package
   yum:
