update supported version information and add new Fedora version
Fedora 30 support added
Fedora 27 support removed - no copr repository available for 27

--- a/vars/Fedora30.yml
+++ b/vars/Fedora30.yml
@@ -5,8 +5,8 @@ dnf_packages_fastvm:
   - dnsmasq-utils
   - libguestfs-tools-c
   - bash-completion
-  - python-lxml
-  - libvirt-python
+  - python3-lxml
+  - python3-libvirt
   - libselinux-python
 dnf_packages_fence_virtd:
   - fence-virtd
