--- a/vars/Fedora29.yml
+++ b/vars/Fedora29.yml
@@ -1,6 +1,6 @@
 ---
 baseurl: 'https://copr-be.cloud.fedoraproject.org/results/ondrejhome/fast-vm/fedora-$releasever-$basearch/'
-dnf_packages_fastvm:
+packages_fastvm:
   - fast-vm
   - dnsmasq-utils
   - libguestfs-tools-c
@@ -8,7 +8,7 @@ dnf_packages_fastvm:
   - python3-lxml
   - python3-libvirt
   - libselinux-python
-dnf_packages_fence_virtd:
+packages_fence_virtd:
   - fence-virtd
   - fence-virtd-libvirt
   - fence-virtd-multicast
