--- a/tasks/config_repositories.yml
+++ b/tasks/config_repositories.yml
@@ -13,6 +13,6 @@
 
 - name: enable optional RPMs repository on RHEL systems
   command: subscription-manager repos --enable=rhel-7-server-optional-rpms
-  when: config_repositories|bool and ansible_distribution == 'RedHat'
+  when: config_repositories|bool and ansible_distribution == 'RedHat' and ansible_distribution_major_version == '7'
   ignore_errors: True
   ## we ignore if this fails because we might have access to needed packages via other repository
