--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -46,7 +46,7 @@
 
 - name: install_ovmf (CentOS/RHEL)
   include_tasks: install_ovmf.yml
-  when: install_ovmf|bool and ansible_distribution != 'Fedora'
+  when: install_ovmf|bool and ( ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat' )
 
 - name: install_ovmf (Fedora)
   include_tasks: install_ovmf_fedora.yml
@@ -58,4 +58,4 @@
 
 - name: install_custom_qemu
   include_tasks: install_custom_qemu.yml
-  when: install_custom_qemu|bool and ansible_distribution != 'Fedora'
+  when: install_custom_qemu|bool and ( ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat' )
