--- a/vars/Fedora30.yml
+++ b/vars/Fedora30.yml
@@ -8,6 +8,7 @@ packages_fastvm:
   - python3-lxml
   - python3-libvirt
   - libselinux-python
+  - zstd
 packages_fence_virtd:
   - fence-virtd
   - fence-virtd-libvirt
