--- a/tasks/install_fence_virtd.yml
+++ b/tasks/install_fence_virtd.yml
@@ -8,6 +8,7 @@
   file:
     path: '/etc/cluster'
     state: 'directory'
+    mode: '0755'
 
 - name: generate fence_xvm key
   command: dd if=/dev/urandom of=/etc/cluster/fence_xvm.key bs=4k count=1
