--- a/vars/CentOS8.yml
+++ b/vars/CentOS8.yml
@@ -7,6 +7,8 @@ packages_fastvm:
   - bash-completion
   - python3-lxml
   - python3-libvirt
+  - pv
+  - sshpass
 packages_fence_virtd:
   - fence-virtd
   - fence-virtd-libvirt
