Add Fedora 33 support and remove last outstanding Fedora 30 file

--- a/vars/Fedora33.yml
+++ b/vars/Fedora33.yml
@@ -7,7 +7,7 @@ packages_fastvm:
   - bash-completion
   - python3-lxml
   - python3-libvirt
-  - libselinux-python
+  - python3-libselinux
   - zstd
 packages_fence_virtd:
   - fence-virtd
