Add support for new platforms
Namely:
- AlmaLinux 8.x
- Debian 10, 11
- Ubuntu 18.04, 20.04

Debian and Ubuntu doesn't support all the features as of this commit.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,6 +15,16 @@ galaxy_info:
     - 31
     - 32
     - 33
+    - 34
+    - 35
+  - name: Debian
+    versions:
+    - 'buster'
+    - 'bullseye'
+  - name: Ubuntu
+    versions:
+    - 'bionic'
+    - 'focal'
   galaxy_tags:
   - system
 dependencies: []
