--- a/tasks/config_repositories.yml
+++ b/tasks/config_repositories.yml
@@ -1,6 +1,8 @@
 ---
 - name: add and enable fast-vm yum repository
-  when: config_repositories|bool
+  when:
+    - config_repositories|bool
+    - ansible_distribution in ['Fedora', 'RedHat', 'CentOS', 'AlmaLinux' ]
   yum_repository:
     name: 'ondrejhome-fast-vm'
     description: 'Copr repo for fast-vm owned by ondrejhome'
@@ -22,7 +24,8 @@
   when: config_repositories|bool and
         ( (ansible_distribution == 'RedHat' and ansible_distribution_major_version == '8') or
         (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '7') or
-        (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '8') )
+        (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '8') or
+        (ansible_distribution == 'AlmaLinux' and ansible_distribution_major_version == '8') )
 - name: add fast-vm-epel-deps yum repository for EL7/EL8 systems
   yum_repository:
     name: 'fast-vm-epel-deps'
