--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,6 +10,7 @@ galaxy_info:
     versions:
     - 7
     - 8
+    - 9
   - name: Fedora
     versions:
     - 31
@@ -17,10 +18,12 @@ galaxy_info:
     - 33
     - 34
     - 35
+    - 40
   - name: Debian
     versions:
     - 'buster'
     - 'bullseye'
+    - 'bookworm'
   - name: Ubuntu
     versions:
     - 'bionic'
